--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,15 +18,39 @@
         android:id="@+id/settingsFragment"
         android:name="com.example.fridgerec.activities.fragments.SettingsFragment"
         android:label="Settings"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@layout/fragment_settings" >
+        <action
+            android:id="@+id/action_settingsFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/shoppingFragment"
         android:name="com.example.fridgerec.activities.fragments.ShoppingFragment"
         android:label="Shopping List"
-        tools:layout="@layout/fragment_shopping" />
+        tools:layout="@layout/fragment_shopping" >
+        <action
+            android:id="@+id/action_shoppingFragment_to_shoppingCreationFragment"
+            app:destination="@id/shoppingCreationFragment" />
+    </fragment>
     <fragment
         android:id="@+id/inventoryCreationFragment"
         android:name="com.example.fridgerec.activities.fragments.InventoryCreationFragment"
-        android:label="fragment_inventory_creation"
+        android:label="Create New Inventory Item"
         tools:layout="@layout/fragment_inventory_creation" />
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.fridgerec.activities.fragments.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_inventoryFragment"
+            app:destination="@id/inventoryFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/shoppingCreationFragment"
+        android:name="com.example.fridgerec.activities.fragments.ShoppingCreationFragment"
+        android:label="fragment_shopping_creation"
+        tools:layout="@layout/fragment_shopping_creation" />
 </navigation>
