--- a/app/src/main/res/menu/menu_item_creation.xml
+++ b/app/src/main/res/menu/menu_item_creation.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/switchMode"
-        android:title="shopping mode"
-        app:actionLayout="@layout/switch_item"
-        app:showAsAction="always"></item>
+        android:id="@+id/miSave"
+        android:title="save"
+        app:showAsAction="always" />
 </menu>
