--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -43,7 +43,11 @@
         android:id="@+id/inventoryCreationFragment"
         android:name="com.example.fridgerec.activities.fragments.InventoryCreationFragment"
         android:label="Create New Inventory Item"
-        tools:layout="@layout/fragment_inventory_creation" />
+        tools:layout="@layout/fragment_inventory_creation" >
+        <action
+            android:id="@+id/action_inventoryCreationFragment_to_inventoryFragment"
+            app:destination="@id/inventoryFragment" />
+    </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.fridgerec.activities.fragments.LoginFragment"
@@ -59,5 +63,9 @@
         android:id="@+id/shoppingCreationFragment"
         android:name="com.example.fridgerec.activities.fragments.ShoppingCreationFragment"
         android:label="fragment_shopping_creation"
-        tools:layout="@layout/fragment_shopping_creation" />
+        tools:layout="@layout/fragment_shopping_creation" >
+        <action
+            android:id="@+id/action_shoppingCreationFragment_to_shoppingFragment"
+            app:destination="@id/shoppingFragment" />
+    </fragment>
 </navigation>
