--- a/app/src/main/res/layout/fragment_inventory_creation.xml
+++ b/app/src/main/res/layout/fragment_inventory_creation.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/menu_item_creation">
+            app:menu="@menu/menu_save">
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
