add dependencies for litho + setup lithoview in InventoryFragment + preliminary test works (textview of hello world)

--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -20,11 +20,18 @@
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvInventoryList"
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/rvInventoryList"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:padding="8dp" />-->
+
+    <com.facebook.litho.LithoView
+        android:id="@+id/lvInventoryList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp" />
+        android:layout_below="@+id/appBarLayout"
+        android:layout_marginTop="0dp" />
 
     <FrameLayout
         android:layout_width="wrap_content"
