make chips checkable

--- a/app/src/main/res/layout/dialog_sort_filter_pref.xml
+++ b/app/src/main/res/layout/dialog_sort_filter_pref.xml
@@ -23,6 +23,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="20dp">
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
@@ -36,24 +37,28 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.chip.Chip
+                style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:id="@+id/chipSortFoodName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="food name" />
 
             <com.google.android.material.chip.Chip
+                style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:id="@+id/chipSortFoodGroup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="food group" />
 
             <com.google.android.material.chip.Chip
+                style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:id="@+id/chipSortSourceDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="source date" />
 
             <com.google.android.material.chip.Chip
+                style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:id="@+id/chipSortExpireDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,18 +76,21 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.chip.Chip
+                style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:id="@+id/chipFilterExpireDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="expire date" />
 
             <com.google.android.material.chip.Chip
+                style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:id="@+id/chipFilterSourceDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="source date" />
 
             <com.google.android.material.chip.Chip
+                style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:id="@+id/chipFilterFoodGroup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
