--- a/app/src/main/res/layout/dialog_sort_filter_pref.xml
+++ b/app/src/main/res/layout/dialog_sort_filter_pref.xml
@@ -33,6 +33,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
         <com.google.android.material.chip.ChipGroup
+            app:singleSelection="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -72,6 +73,7 @@
             android:text="Filter by:" />
 
         <com.google.android.material.chip.ChipGroup
+            app:singleSelection="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
