toggle visibility of filter linear layouts based on corresponding filter chip checked state

--- a/app/src/main/res/layout/dialog_sort_filter_params.xml
+++ b/app/src/main/res/layout/dialog_sort_filter_params.xml
@@ -114,10 +114,11 @@
         </com.google.android.material.chip.ChipGroup>
 
         <LinearLayout
-            android:id="@+id/llExpireBefore"
+            android:id="@+id/llFilterExpireBefore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/textView5"
@@ -138,7 +139,8 @@
             android:id="@+id/llFilterExpireAfter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -160,7 +162,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -182,7 +185,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -203,7 +207,8 @@
             android:id="@+id/llFilterFoodGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
