--- a/app/src/main/res/layout/fragment_inventory_creation.xml
+++ b/app/src/main/res/layout/fragment_inventory_creation.xml
@@ -15,6 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:titleTextColor="@color/white"
             app:menu="@menu/menu_save">
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
