--- a/app/src/main/res/menu/menu_inventory_list.xml
+++ b/app/src/main/res/menu/menu_inventory_list.xml
@@ -4,5 +4,6 @@
     <item
         android:id="@+id/miSortFilter"
         android:title="Sort/Filter"
+        android:icon="@drawable/ic_filter"
         app:showAsAction="always" />
 </menu>
