--- a/app/src/main/res/layout/dialog_sort_filter_params.xml
+++ b/app/src/main/res/layout/dialog_sort_filter_params.xml
@@ -14,6 +14,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:titleTextColor="@color/menu_item_colour"
             app:menu="@menu/menu_save">
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
