configure toolbar text & icon colours using theming instead of hardcode

--- a/app/src/main/res/drawable/ic_save_btn.xml
+++ b/app/src/main/res/drawable/ic_save_btn.xml
@@ -2,8 +2,9 @@
     android:width="460dp"
     android:height="460dp"
     android:viewportWidth="460"
-    android:viewportHeight="460">
+    android:viewportHeight="460"
+    android:tint="?attr/colorControlNormal">
   <path
-      android:fillColor="@color/menu_item_colour"
+      android:fillColor="@color/black"
       android:pathData="M427.14,0C408.93,0 51.38,0 32.87,0C14.74,0 0,14.74 0,32.87v394.27c0,18.12 14.74,32.87 32.87,32.87c0,0 374.89,0 394.27,0c18.12,0 32.87,-14.74 32.87,-32.87V32.87C460,14.74 445.26,0 427.14,0zM245.81,30h50.99v54.47h-50.99V30zM107.2,30h108.61v69.47c0,8.28 6.72,15 15,15h81c8.28,0 15,-6.72 15,-15V30h26.38v119.64H107.2V30zM107.01,430V308.67h245.99v121.33H107.01zM430,427.14L430,427.14c-0,1.58 -1.29,2.87 -2.87,2.87h-44.14V293.67c0,-8.28 -6.72,-15 -15,-15H92.01c-8.28,0 -15,6.72 -15,15v136.33H32.87c-1.58,0 -2.87,-1.28 -2.87,-2.87V32.87C30,31.28 31.28,30 32.87,30h44.33v134.64c0,8.28 6.72,15 15,15h275.99c8.28,0 15,-6.72 15,-15V30h43.95c1.58,0 2.87,1.28 2.87,2.87V427.14z" />
 </vector>
