--- a/app/src/main/res/layout/fragment_shopping_creation.xml
+++ b/app/src/main/res/layout/fragment_shopping_creation.xml
@@ -11,13 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:titleTextColor="@color/menu_item_colour"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             app:menu="@menu/menu_save">
-        </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
 </LinearLayout>
