--- a/app/src/main/res/menu/menu_save.xml
+++ b/app/src/main/res/menu/menu_save.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/miSave"
-        android:icon="@drawable/ic_save_btn"
+        android:icon="@drawable/ic_save"
         android:title="save"
         app:showAsAction="always" />
 </menu>
