--- a/app/src/main/res/menu/menu_contextual_action_bar.xml
+++ b/app/src/main/res/menu/menu_contextual_action_bar.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/check"
+        android:id="@+id/mi_check"
         android:icon="@drawable/ic_checkbox"
         android:title="check"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/delete"
+        android:id="@+id/mi_delete"
         android:icon="@drawable/ic_delete"
         android:title="delete"
         app:showAsAction="always" />
