set up exposed dropdown menu for food group filter

--- a/app/src/main/res/layout/dialog_sort_filter_params.xml
+++ b/app/src/main/res/layout/dialog_sort_filter_params.xml
@@ -208,21 +208,21 @@
             android:id="@+id/llFilterFoodGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:visibility="gone">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="food group" />
+                android:hint="@string/dropdown_select_food_group">
 
-            <Spinner
-                android:id="@+id/spFoodGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                <AutoCompleteTextView
+                    android:id="@+id/edmFoodGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
