allow user to type in food group filter (auto selection)

--- a/app/src/main/res/layout/dialog_sort_filter_params.xml
+++ b/app/src/main/res/layout/dialog_sort_filter_params.xml
@@ -222,7 +222,7 @@
                     android:id="@+id/actvFoodGroup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="none" />
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
     </LinearLayout>
